fix mobile nav
Width was too wide on bigger screens, now got halfed in width on +700px.

--- a/css/header.css
+++ b/css/header.css
@@ -94,12 +94,11 @@
   font-weight: 600;
   position: absolute;
   top: 100%;
-  left: 0;
-  width: 100%;
+  right: 0;
+  width: 50%;
   background: white;
   box-shadow: 0 2px 5px rgba(3, 74, 166, 0.3);
   z-index: 1000;
-  border-bottom: 2px solid rgb(3, 74, 166);
   border-radius: 0 0 8px 8px;
   overflow: hidden;
   max-height: 0;
@@ -119,7 +118,6 @@
 
 .mobile-nav-list li {
   box-shadow: 0 2px 5px rgba(3, 74, 166, 0.2);
-  border-bottom: 2px solid rgb(3, 74, 166);
   border-radius: 8px;
 }
 
@@ -136,6 +134,12 @@
 }
 
 /* Responsive Design */
+@media (max-width: 700px) {
+  .mobile-nav {
+    width: 100%;
+  }
+}
+
 @media (max-width: 1023px) {
   .navigation-header {
     display: none;
